test/library/standard/Reflection/primitives/ParenlessMethodImmdReceiver.good
ParenlessMethodImmdReceiver.chpl:4: error: false
