test/library/standard/Reflection/primitives/ParenlessMethodImmdReceiver.chpl

proc int.asdf {}

proc main {
  compilerError(__primitive("resolves", 5.asdf()):string);
}

